2010-11-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c:  [Bug #3071836]: Crash/Tcl_Panic on WinXP saving file to C:\
	* win/tkWinInit.c:    re-write TkpDisplayWarning not to use any Tcl functions
	any more. This allows TkpDisplayWarning to be used as panic proc.
	* win/winMain.c:      use TkpDisplayWarning as panic proc on Windows.
	* generic/tkMain.c:   Remove unused strrchr, combine outChannel/errChannel
	variables to a single variable

2010-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanv*.c:        Revise Tcl_Panic() calls ending with a newline
	* generic/tkGeomerty.c      removing the newline, because Tcl_Panic()
	* generic/tkImgPhInstance.c outputs a final newline already.
	* generic/tkMenu.c
	* generic/tkRectOval.c
	* generic/tkTextBTree.c
	* generic/tkWindow.c
	* unix/tkUnixRFont.c
	* win/tkWinColor.c
	* win/tkWinDraw.c
	* win/tkWinMenu.c

2010-11-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/winMain.c:   [FRQ 491789]: "setargv() doesn't support a
	unicode cmdline" now implemented for cygwin and mingw32 too.
	* win/configure.in:	Allow cross-compilation by default.
	* win/configure    (regenerated)

2010-11-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:      [FRQ 491789]: "setargv() doesn't support a
	unicode cmdline"   now implemented for mingw-w64
	* win/configure    (regenerated)
	* win/winMain.c    Workaround for bug in some versions of mingw-w64

2010-11-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/winMain.c    Bring compilation under mingw-w64 a bit closer
	* win/tcl.m4       to reality. See for what's missing:
	*                  <https://sourceforge.net/apps/trac/mingw-w64/wiki/Unicode%20apps>
	* win/configure    (re-generated)
	* win/tkWinPort.h  [Bug #3110161]: Extensions using TCHAR don't compile
	on VS2005 SP1

2010-11-10  Andreas Kupries  <andreask@activestate.com>

	* changes:	Updates for 8.6b2 release.

2010-11-06  Jan Nijtmans  <nijtmans@users.sf.net>
